testsuite/tests/typecheck/should_fail/T22560_fail_d.stderr

T22560_fail_d.hs:5:1: error: [GHC-92337]
    • Invalid invisible type variable binder: @k
      Either a standalone kind signature (SAKS)
      or a complete user-supplied kind (CUSK, legacy feature)
      is required to use invisible binders.
    • In the data type declaration for ‘T’
    Suggested fix: Add a standalone kind signature for ‘T’
